# rgb-sunglasses

./: .clang-format  .clang-format-ignore  .gitignore  .mcp.json  CLAUDE.md  CMakeLists.txt  Kconfig  Kconfig.sysbuild  README.md  VERSION  debug.jdebug  jest.setup.ts  nyan_cat.glim  pm_static.yml.bak  pm_static_rgb_sunglasses_proto0_nrf5340_cpuapp.yml  prj.conf  rgb-sunglasses.code-workspace  sysbuild.cmake  sysbuild.conf
fw/: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  Kconfig  README.md  VERSION  pm_static_rgb_sunglasses_proto0_nrf5340_cpuapp.yml  prj.conf  sysbuild.cmake
fw/.claude/: settings.local.json
fw/boards/: rgb_sunglasses_dk_nrf5340_cpuapp.conf  rgb_sunglasses_proto0_nrf5340_cpuapp.conf
fw/conf/rgb_sunglasses_dk_nrf5340_cpuapp/: sysbuild.cmake  sysbuild.conf
fw/conf/rgb_sunglasses_proto0_nrf5340_cpuapp/: sysbuild.conf
fw/docs/: animation-bluetooth-decoupling-plan.md  animation-framework-decoupling-plan.md  claude-setup-ollama.md  developer-setup.md  flashing-without-jlink.md  gatt-server-stack-refactor-plan.md  imu-coordinate-frame.md  proto0-assembly-guide.md  proto0-board-pinout.md  proto0-hardware-guide.md  proto0-user-guide.md
fw/drivers/: CMakeLists.txt  Kconfig
fw/drivers/bq25792/: Kconfig  bq25792.cpp  bq25792_init.c  bq25792_init.h  bq25792_irq.h  bq25792_priv.h
fw/drivers/emul_bmi270/: CMakeLists.txt  Kconfig  emul_bmi270.c  emul_bmi270.h
fw/drivers/emul_tps25750/: CMakeLists.txt  Kconfig  emul_tps25750.c  emul_tps25750.h
fw/drivers/net_core_sim_flash/: Kconfig  net_core_sim_flash.c
fw/drivers/tps25750/: tps25750.c  tps25750_priv.h
fw/drivers/vm3011/: vm3011_init.c  vm3011_priv.h
fw/extensions/: Doxyfile  README.md  build.sh
fw/extensions/hello/: hello.c
fw/extensions/plasma/: plasma.cpp
fw/include/: netcore_version_protocol.h
fw/include/rgbx/: rgbx_animation.h  rgbx_api.h
fw/ipc_radio/: CMakeLists.txt  Kconfig
fw/ipc_radio/src/: main.c  netcore_version.c
fw/mcuboot_hooks/: CMakeLists.txt  fprotect_hook.c
fw/misc/tps25750/: tps25750-config-9v.c  tps25750-config-compressed.c  tps25750-config-compressed.h  tps25750-config-uncompressed.h  tps25750-config.h  tps25750-full-config.c
fw/scripts/: build-fw.sh  coredump-debug.sh  coredump-fetch.sh  fix-usb-dev-nodes.sh  fw-shell.sh  fw_size_report.py  img_to_c.py  jlink-flash.sh  mcumgr-flash.sh  observe-power.py  pcm_to_wav.py  provision-device.sh
fw/scripts/compress_byte_array/: README.md  compress_byte_array.py  test_compression.py
fw/scripts/lib/: serial-port.sh
fw/scripts/tests/: test_fw_size_report.py
fw/src/: battery_soc.h  battery_util.h  bluetooth.cpp  button_event_listener.h  buttons.cpp  buttons.h  configuration_provider.h  core_config.cpp  core_config.h  led_config.h  led_controller.cpp  led_old.cpp  main.c  mcuboot_info.cpp  mcuboot_updater.cpp  mcuboot_updater.h  netcore_version.c  pattern_controller.cpp  pattern_controller.h  power.cpp  power.h
fw/src/animations/: animation.h  animation_activator.h  animation_active_state_observer.h  animation_audio_source.h  animation_base.cpp  animation_base.h  animation_button_source.h  animation_imu_source.h  animation_is_active_binding.h  animation_registry.cpp  animation_registry_defaults.cpp  animation_renderer.h  animation_types.h  bad_apple_animation.cpp  bad_apple_animation.h  bt_animations.cpp  bt_animations.h  fft_bars_animation.cpp  fft_bars_animation.h  glim_player_animation.cpp  glim_player_animation.h  matrix_code_animation.cpp  matrix_code_animation.h  my_eyes_animation.cpp  my_eyes_animation.h  null_animation.cpp  null_animation.h  nyan_cat_animation.cpp  nyan_cat_animation.h  pulse_animation.cpp  pulse_animation.h  rainbow_animation.cpp  rainbow_animation.h  text_animation.cpp  text_animation.h  tilt_animation.cpp  tilt_animation.h  zigzag_animation.h
fw/src/bluetooth/: animation_is_active_characteristic.h  battery_service.cpp  battery_service.h  boot_gate.cpp  boot_gate.h  bt_conn_activity.h  bt_gatt_traits.h  bt_service_cpp.h  bt_state_observer.h  conn_param_governor_core.cpp  conn_param_governor_core.h  gatt_cpf.h  mcuboot_updater_service.cpp  persistent_characteristic.h  power_debug_service.cpp  power_debug_service.h
fw/src/debug/: coredump_manager.cpp  coredump_manager_core.cpp  coredump_manager_core.h  crash_shell.cpp
fw/src/extensions/: extension_animation_proxy.cpp  extension_animation_proxy.h  extension_bt.cpp  extension_bt.h  extension_host.cpp  extension_host.h  extension_limits.h  extension_manifest.cpp  extension_manifest.h  extension_metadata_blob.cpp  extension_metadata_blob.h  extension_param_persistence.cpp  extension_param_persistence.h  extension_registry.cpp  extension_registry.h
fw/src/factory_reset/: factory_reset.cpp  factory_reset_core.cpp  factory_reset_core.h
fw/src/fonts/: Consolas.h  FontAtlas.cpp  FontAtlas.h
fw/src/imu/: imu.cpp  imu.h
fw/src/power/: charger_policy.cpp  charger_policy.h  comm_health.cpp  comm_health.h
fw/src/settings/: persistent_value_registry.cpp  persistent_value_registry.h  persistent_value_store.cpp  persistent_value_store.h
fw/src/sound/: audio_config.cpp  audio_config.h  audio_dsp.cpp  audio_dsp.h  sound.cpp  sound.h
fw/src/status_led/: status_led.cpp  status_led.h  status_led_math.h
fw/src/storage/: GLIM_FORMAT.md  appcfg_erase.cpp  appcfg_erase.h  glim_decoder.cpp  glim_decoder.h  glim_registry.cpp  glim_registry.h  storage.cpp  storage.h
fw/src/usb/: usb_init.c
fw/sysbuild/: CMakeLists.txt  mcuboot_version_conf.cmake
fw/sysbuild/ipc_radio/: prj.conf
fw/sysbuild/mcuboot/: prj.conf
fw/tests/bt_state_observer/: CMakeLists.txt
fw/tests/configuration_provider/: CMakeLists.txt  testcase.yaml
fw/tests/factory_reset/: CMakeLists.txt  testcase.yaml
fw/tests/led_controller/: CMakeLists.txt  prj.conf  testcase.yaml
fw/tests/mcuboot_updater/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
fw/tests/status_led/: CMakeLists.txt
fw/tools/: convert_gif_to_glim.py  convert_video_to_glim.py  dump_dfu_tlv.py  package_mcuboot.py
fw/tools/tests/: test_convert_bad_apple.py
tests/sound/audio_dsp/: CMakeLists.txt
(+720 files in other folders)
