# SPDX-License-Identifier: Apache-2.0

cmake_minimum_required(VERSION 3.20.0)
find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
project(battery_soc_tests)

target_sources(app PRIVATE
    src/main.cpp
)

# Unit under test is header-only: fw/src/battery_soc.h
target_include_directories(app PRIVATE ${CMAKE_CURRENT_LIST_DIR}/../../../src)
